feat: update title mentioning SerpApi

--- a/src/layout.astro
+++ b/src/layout.astro
@@ -3,7 +3,7 @@ import "@fontsource-variable/inter";
 import "./styles.css";
 import Header from "./components/Header";
 
-const title = "IDSW 2025";
+const title = "IDSW 2025 with SerpApi";
 const description =
   "Join us for the Indonesia Software Developer Conference (IDSW) on 22-23rd November, 2025. Indonesia's premier software developer conference bringing together developers, engineers, and technology enthusiasts.";
 const keywords =
