fix: update image class for responsive grayscale effect in speaker components

--- a/src/components/CFPSpeaker.astro
+++ b/src/components/CFPSpeaker.astro
@@ -34,7 +34,7 @@ if (!displayImage) {
           src={displayImage.default}
           alt={data.name}
           class:list={[
-            "h-full w-full object-cover grayscale transition-all duration-300 group-hover:scale-110 group-hover:grayscale-0",
+            "h-full w-full object-cover lg:grayscale transition-all duration-300 lg:group-hover:scale-110 lg:group-hover:grayscale-0",
           ]}
         />
       </div>
