--- a/src/components/CardSpeaker.astro
+++ b/src/components/CardSpeaker.astro
@@ -29,7 +29,7 @@ if (!image) {
           src={image.default}
           alt={data.name}
           class:list={[
-            "h-full w-full object-cover grayscale transition-all duration-300 group-hover:scale-110 group-hover:grayscale-0",
+            "h-full w-full object-cover lg:grayscale transition-all duration-300 lg:group-hover:scale-110 lg:group-hover:grayscale-0",
           ]}
         />
       </div>
