--- a/src/pages/stream.astro
+++ b/src/pages/stream.astro
@@ -7,10 +7,22 @@ import Layout from "../layout.astro";
     <h1 class="text-3xl font-bold pt-12 mb-6 text-center">
       IDSW 2025 with SerpApi — Live Stream
     </h1>
-
+    <h2 class="text-2xl font-bold pt-12 mb-6 text-center">
+      Day 1
+    </h2>
     <div class="relative w-full max-w-6xl mx-auto aspect-video rounded-lg overflow-hidden shadow-xl">
       <iframe
-        src="https://streamyard.com/watch/KC7H9EWzCakD?embed=true"
+        src="https://streamyard.com/watch/r4kk6wfhj8Wv?embed=true"
+        class="absolute inset-0 w-full h-full border-0"
+        allow="autoplay; fullscreen"
+      ></iframe>
+    </div>
+    <h2 class="text-2xl font-bold pt-12 mb-6 text-center">
+      Day 2
+    </h2>
+    <div class="relative w-full max-w-6xl mx-auto aspect-video rounded-lg overflow-hidden shadow-xl">
+      <iframe
+        src="https://streamyard.com/watch/FMy5QaD3BMqh?embed=true"
         class="absolute inset-0 w-full h-full border-0"
         allow="autoplay; fullscreen"
       ></iframe>
